# eduOS-rs

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  _config.yml  aarch64-eduos.json  azure-pipelines.yml  build.md  build.rs  i686-eduos.json  i686-unknown-none-gnu.json  index.html  index.md  jekyll-theme-hydeout.gemspec  licensing.md  link_aarch64.ld  links.md  mycontact.md  riscv64-eduos.json  rust-toolchain  rust-toolchain.toml  setup_tests.sh  test.ps1  test.sh  tests_inside_docker.sh  x86_64-eduos.json  x86_64-unknown-eduos.json  x86_64-unknown-none-gnu.json
.cargo/: config  config.toml
.github/workflows/: build.yml  clippy.yml  format.yml  run.yml  rust.yml
_includes/: copyright.html  sidebar-icon-links.html
_layouts/: default.html
_posts/: 2017-09-20-hello-eduos-rs.md
_sass/hydeout/: _variables.scss
css/: solo.css
demo/: Makefile  hello  hello.c
ehyve/: Cargo.toml  Makefile  build.rs
ehyve/src/: consts.rs  error.rs  main.rs  utils.rs  vm.rs
ehyve/src/linux/: ehyve.rs  error.rs  gdt.rs  kvm.c  kvm.h  kvm.rs  mod.rs  proto.rs  utils.rs  vcpu.rs  vm.rs
ehyve/src/macos/: ehyve.rs  error.rs  mem.c  mod.rs  vcpu.rs
ehyve/src/vm/: ehyve.rs  gdt.rs  kvm.rs  mod.rs  proto.rs  utils.rs  vcpu.rs  vm.rs
ehyve/src/windows/: ehyve.rs  error.rs  mod.rs  vcpu.rs
kernel/: Cargo.toml  Makefile  Xargo.toml
kernel/.cargo/: config
kernel/src/: console.rs  lib.rs  logging.rs  macros.rs  runtime_glue.rs
kernel/src/arch/wasm32/: mod.rs
kernel/src/arch/x86_64/: boot.asm  linker.ld  mod.rs  multiboot_header.asm  processor.rs  serial.rs  start.asm
src/: console.rs  consts.rs  errno.rs  heap.rs  io.rs  lib.rs  logging.rs  macros.rs  main.rs  rlib.rs  runtime_glue.rs  timer.rs
src/arch/: mod.rs
src/arch/aarch64/: mod.rs  processor.rs  serial.rs  start.rs
src/arch/aarch64/kernel/: gic.rs  irq.rs  link.ld  mod.rs  processor.rs  serial.rs  start.rs  start.s  switch.rs  task.rs  timer.rs  vectors.s
src/arch/aarch64/mm/: mod.rs
src/arch/riscv64/kernel/: irq.rs  link.ld  mod.rs  processor.rs  serial.rs  start.rs  start.s  switch.rs  task.rs  timer.rs  trap.s
src/arch/wasm32/: serial.rs
src/arch/x86/: boot.asm  entry.s  gdt.rs  irq.rs  irq_handler.asm  linker-i686.ld  linker.ld  long_mode_init.asm  mod.rs  processor.rs  serial.rs  start.rs  switch.asm  task.rs  udiv3.asm  umodi3.asm
src/arch/x86/kernel/: entry.s  entry32.s  gdt.rs  irq.rs  link_i686.ld  mod.rs  pit.rs  processor.rs  serial.rs  start.rs  switch.rs  syscall.rs  task.rs  vga.rs
src/arch/x86/mm/: mod.rs  paging.rs  physicalmem.rs  virtualmem.rs
src/arch/x86_64/: boot.asm  common.inc  cpuid.rs  gdt.rs  interrupt_handlers.asm  interrupts.rs  irq.rs  irq_handler.asm  keyboard.rs  linker.ld  long_mode_init.asm  mod.rs  multiboot_header.asm  paging.rs  pci.rs  pit.rs  processor.rs  serial.rs  start.rs  switch.asm  switch.rs  syscall.asm  syscall.rs  task.rs  timer.rs  user_land.s  vga.rs
src/arch/x86_64/kernel/: gdt.rs  irq.rs  mod.rs  pit.rs  processor.rs  serial.rs  start.rs  switch.rs  switch.s  syscall.rs  task.rs  user_land.s
src/arch/x86_64/mm/: mod.rs  paging.rs  physicalmem.rs  virtualmem.rs
src/collections/: doublylinkedlist.rs  mod.rs
src/fd/: mod.rs  stdio.rs
src/fs/: initrd.rs  mod.rs  vfs.rs
src/mm/: allocator.rs  buddy.rs  freelist.rs  hole.rs  linked_list.rs  linked_list_allocator.rs  mod.rs  nodepool.rs  page_allocator.rs  vma.rs
src/scheduler/: mod.rs  scheduler.rs  task.rs
src/synch/: mod.rs  mutex.rs  ring.rs  semaphore.rs  spinlock.rs
src/syscall/: exit.rs  invalid.rs  message.rs  mod.rs  nothing.rs  write.rs
