[package]
name = "eduos-rs"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[package.metadata.bootimage]
build-command = ["build"]
# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
# Applies to `bootimage run` and `bootimage runner`
run-command = ["qemu-system-x86_64", "-display", "none", "-smp", "1", "-m", "256M", "-serial", "stdio", "-cpu", "qemu64,apic,fsgsbase,rdtscp,xsave,xsaveopt,fxsr", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-drive", "format=raw,file={}"]
# Additional arguments passed to the run command for non-test executables
# Applies to `bootimage run` and `bootimage runner`
run-args = []

[features]
default = ["qemu-exit"]
vga = []

[dependencies]
bitflags = "1.0"
spin = "0.9"
talc = "4.4.2"
qemu-exit = { version = "3.0", optional = true }
x86 = { version = "0.52", default-features = false }
cfg-if = "1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies.bootloader]
version = "0.9.29"
default-features = false
features = ["recursive_page_table"]

[dependencies.num-traits]
version = "0.2"
default-features = false
