[package]
name = "eduos-rs"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[package.metadata.bootimage]
build-command = ["build"]
# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
# Applies to `bootimage run` and `bootimage runner`
run-command = ["qemu-system-x86_64", "-display", "none", "-smp", "1", "-m", "256M", "-serial", "stdio", "-cpu", "qemu64,apic,fsgsbase,rdtscp,xsave,xsaveopt,fxsr", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-drive", "format=raw,file={}"]
# Additional arguments passed to the run command for non-test executables
# Applies to `bootimage run` and `bootimage runner`
run-args = []

[features]
default = ["qemu-exit"]
vga = []

[dependencies]
lock_api = "0.4.12"
qemu-exit = { version = "4.0.0", optional = true }
cfg-if = "1.0"

# The `x86` crate disables itself via `#![cfg(...)]` on other architectures, but
# then no longer declares `#![no_std]` and pulls in `std`. Scope it to x86 so the
# bare-metal aarch64 build does not try to compile it.
[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
x86 = { version = "0.52", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.9.34"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "11.2.0"
arm-gic = "0.8.1"
semihosting = { version = "0.1", features = ["stdio"] }
memory_addresses = { version = "0.2.3", default-features = false, features = [
        "aarch64",
] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
semihosting = { version = "0.1", features = ["stdio"] }
memory_addresses = { version = "0.2.3", default-features = false, features = [
        "riscv64",
] }
