[package]
name = "ehyve"
version = "0.0.1"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen>"]
license = "MIT"

[dependencies]
raw-cpuid = "5.0.0"
log = "0.4"
env_logger = "0.5.10"
aligned_alloc = "0.1"
elf = "0.0.10"
libc = "0.2.42"
memmap = "0.6"
lazy_static = "1.1"

[dependencies.x86]
path = "../crates/x86"
#default-features = false

[target.'cfg(target_os = "macos")'.dependencies.hypervisor]
path = "../crates/hypervisor"

[target.'cfg(target_os = "windows")'.dependencies.libwhp]
path = "../crates/libwhp"

[target.'cfg(target_os = "linux")'.dependencies.libkvm]
path = "../crates/libkvm"

[target.'cfg(target_os = "windows")'.dependencies.kernel32-sys]
version = "*"
